--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: ./gradlew assemble
       - run:
           name: test
-          command: ./gradlew collectUnitTest jacocoTestReport --stacktrace --info --continue
+          command: ./gradlew collectUnitTest jacocoTestReport --stacktrace --info --no-parallel
       - run:
           name: build sample
           command: |
@@ -56,4 +56,6 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - talaiot_2_0_test
