--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - store_artifacts:
           path: |
             build/reports/tests/
-            home/circleci/repo/library/plugins/talaiot-standard/build/reports/tests/test/index.html
+            /home/circleci/repo/library/plugins/talaiot-standard/build/reports/tests/test/*
             library/plugins/talaiot-standard/build/reports/tests/test/*
 
   deploy-snapshot:
