--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: ./gradlew assemble
       - run:
           name: test
-          command: ./gradlew collectUnitTest jacocoTestReport --stacktrace --info
+          command: ./gradlew collectUnitTest jacocoTestReport --stacktrace --info --no-parallel
       - run:
           name: build sample
           command: |
