--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,4 +56,4 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: master, talaiot_2_0_test
