using the correct name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,4 +56,6 @@ workflows:
             - build
           filters:
             branches:
-              only: master, talaiot_2_0_test
+              only:
+                - master
+                - talaiot_2_0_test
