--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           name: test
           command: |
             java --version
-            ./gradlew collectUnitTest jacocoTestReport --no-configuration-cache
+            ./gradlew collectUnitTest jacocoTestReport --info --no-configuration-cache
       - run:
           name: build sample
           command: |
